tests/ui/specialization/min_specialization/repeating_param.stderr
error: specializing impl repeats parameter `T`
  --> $DIR/repeating_param.rs:12:1
   |
LL | impl<T> X for (T, T) {
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

